apps/cluster/prometheus/templates/argocd-metrics-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-metrics
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-metrics
spec:
  selector:
    app.kubernetes.io/name: argocd-application-controller
  ports:
    - name: metrics
      port: 8082
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-metrics
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server-metrics
spec:
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: metrics
      port: 8083
      targetPort: 8083
