apps/cluster/prometheus/templates/ingressroute-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/hostname: grafana.m0sh1.cc
    external-dns.alpha.kubernetes.io/target: 10.0.0.20
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.m0sh1.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.m0sh1.cc
